[gd_scene load_steps=12 format=3 uid="uid://d4ldts0rw5g7h"]

[ext_resource type="Texture2D" uid="uid://chott21qimfuk" path="res://assets/sprites/ui_boder.png" id="1_6u1q4"]
[ext_resource type="Script" path="res://ui_lab/settings/settings.gd" id="1_yr5um"]
[ext_resource type="FontFile" uid="uid://d2prf68aedwvv" path="res://common/assets/fonts/Abaddon_Fonts_v1.2/Abaddon Bold.ttf" id="2_dg5lq"]
[ext_resource type="PackedScene" uid="uid://x8cea3v5rvo0" path="res://common/ui/game_info/game_info.tscn" id="3_8kxw0"]
[ext_resource type="Texture2D" uid="uid://diidk6hambh4b" path="res://assets/sprites/bx-left-arrow-alt-big.svg" id="4_y2x0e"]
[ext_resource type="Texture2D" uid="uid://bgkdmn75ncska" path="res://assets/sprites/bxs-edit.svg" id="6_j0h6g"]
[ext_resource type="Texture2D" uid="uid://dn5xbyi150ft3" path="res://assets/sprites/bxs-image.svg" id="7_okcog"]
[ext_resource type="Theme" uid="uid://d2ykf56cwo70c" path="res://resources/dialogue.tres" id="8_kwx37"]
[ext_resource type="PackedScene" uid="uid://duovfb8jbktox" path="res://ui_lab/settings/description_dialog.tscn" id="9_1opa8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6smb4"]
content_margin_left = 36.0
content_margin_top = 36.0
texture = ExtResource("1_6u1q4")
texture_margin_left = 48.0
texture_margin_top = 48.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5bmyf"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yr5um")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6smb4")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/line_spacing = -32
theme_override_fonts/font = ExtResource("2_dg5lq")
theme_override_font_sizes/font_size = 96
text = "Settings"
horizontal_alignment = 1

[node name="Back" type="Button" parent="MarginContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("4_y2x0e")

[node name="GameInfo" parent="." instance=ExtResource("3_8kxw0")]
clip_contents = true
layout_mode = 1
offset_left = 240.0
offset_top = 185.0
offset_right = 240.0
offset_bottom = 185.0
scale = Vector2(0.75, 0.75)
metadata/_edit_lock_ = true

[node name="GameTitleButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.834
anchor_top = 0.373
anchor_right = 0.834
anchor_bottom = 0.373
offset_left = -21.2802
offset_top = -21.84
offset_right = 22.7198
offset_bottom = 22.16
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("6_j0h6g")

[node name="DescriptionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.834
anchor_top = 0.428
anchor_right = 0.834
anchor_bottom = 0.428
offset_left = -21.2802
offset_top = -22.24
offset_right = 22.7198
offset_bottom = 21.76
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("6_j0h6g")

[node name="ImageButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519
anchor_top = 0.325
anchor_right = 0.519
anchor_bottom = 0.325
offset_left = -22.4801
offset_top = -22.0
offset_right = 21.5199
offset_bottom = 22.0
grow_vertical = 2
icon = ExtResource("7_okcog")

[node name="InputsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.834
anchor_top = 0.781
anchor_right = 0.834
anchor_bottom = 0.781
offset_left = -21.2802
offset_top = -22.48
offset_right = 22.7198
offset_bottom = 21.52
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("6_j0h6g")

[node name="PlayersButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.454
anchor_top = 0.802
anchor_right = 0.454
anchor_bottom = 0.802
offset_left = -21.6801
offset_top = -22.16
offset_right = 22.3199
offset_bottom = 21.84
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("6_j0h6g")

[node name="GameTitleDialog" type="ConfirmationDialog" parent="."]
transparent_bg = true
initial_position = 2
size = Vector2i(500, 290)
borderless = true
theme = ExtResource("8_kwx37")
ok_button_text = "Confirm"

[node name="VBoxContainer" type="VBoxContainer" parent="GameTitleDialog"]
offset_left = 36.0
offset_top = 36.0
offset_right = 470.0
offset_bottom = 188.0

[node name="Label" type="Label" parent="GameTitleDialog/VBoxContainer"]
layout_mode = 2
text = "Game Title"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GameTitleDialog/VBoxContainer"]
layout_mode = 2
text = "Game Title"

[node name="HSeparator" type="HSeparator" parent="GameTitleDialog/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_5bmyf")

[node name="DescriptionDialog" parent="." instance=ExtResource("9_1opa8")]
visible = false
